TP INT-045 Build/main/default/objects/pse__Resource_Request__c/fields/NCSPSA_Fulfilment_Channel__c.field-meta.xml
<CustomField>
    <fullName>NCSPSA_Fulfilment_Channel__c</fullName>
    <description>The channel through which this RR will be fulfilled</description>
    <label>Fulfilment Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Convert to Perm/DC</fullName>
            </value>
            <value>
                <fullName>Early Talent</fullName>
            </value>
            <value>
                <fullName>ECAS</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
                <default>true</default>
                <label>Internal</label>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>Direct Contractors</fullName>
                <isActive>false</isActive>
                <label>Direct Contractors</label>
            </value>
            <value>
                <fullName>Permanent</fullName>
                <isActive>false</isActive>
                <label>Permanent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>