TP INT-045 Build/main/default/objects/pse__Resource_Request__c/fields/NCSPSA_Fulfilment_Mode__c.field-meta.xml
<CustomField>
    <fullName>NCSPSA_Fulfilment_Mode__c</fullName>
    <label>Fulfilment Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>Offshore</fullName>
            </value>
            <value>
                <fullName>Remote</fullName>
            </value>
            <value>
                <fullName>Secondment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>