TP INT-045 Build/main/default/objects/pse__Resource_Request__c/fields/NCSPSA_Job_Description__c.field-meta.xml
<CustomField>
    <fullName>NCSPSA_Job_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Job Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>