TP INT-045 Build/main/default/objects/pse__Resource_Request__c/fields/NCSPSA_Job_Grade__c.field-meta.xml
<CustomField>
    <fullName>NCSPSA_Job_Grade__c</fullName>
    <label>Job Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OST1</fullName>
            </value>
            <value>
                <fullName>OST2</fullName>
            </value>
            <value>
                <fullName>OST3</fullName>
            </value>
            <value>
                <fullName>OST4</fullName>
            </value>
            <value>
                <fullName>OST5</fullName>
            </value>
            <value>
                <fullName>OST6</fullName>
            </value>
            <value>
                <fullName>OS1</fullName>
            </value>
            <value>
                <fullName>OS2</fullName>
            </value>
            <value>
                <fullName>OS3</fullName>
            </value>
            <value>
                <fullName>OS4</fullName>
            </value>
            <value>
                <fullName>OS5</fullName>
            </value>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>P3</fullName>
            </value>
            <value>
                <fullName>P4</fullName>
            </value>
            <value>
                <fullName>P5</fullName>
            </value>
            <value>
                <fullName>E1</fullName>
            </value>
            <value>
                <fullName>E2</fullName>
            </value>
            <value>
                <fullName>E3</fullName>
            </value>
            <value>
                <fullName>E4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>