TP INT-045 Build/main/default/objects/pse__Resource_Request__c/fields/NCSPSA_Management_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>NCSPSA_Management_Approval_Date__c</fullName>
    <description>The date management approved the RR for new hire.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Management Approval Date</label>
    <type>Date</type>
</CustomField>