TP INT-045 Build/main/default/objects/pse__Resource_Request__c/fields/NCSPSA_Nationality__c.field-meta.xml
<CustomField>
    <fullName>NCSPSA_Nationality__c</fullName>
    <label>Nationality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Preference</fullName>
            </value>
            <value>
                <fullName>Singaporean / Singapore PR</fullName>
            </value>
            <value>
                <fullName>Singapore PR</fullName>
            </value>
            <value>
                <fullName>Singapore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>