TP INT-045 Build/main/default/objects/pse__Resource_Request__c/fields/NCSPSA_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>NCSPSA_Request_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Request Date</label>
    <type>Date</type>
</CustomField>