TP INT-045 Build/main/default/objects/pse__Resource_Request__c/fields/NCSPSA_Require_Standby__c.field-meta.xml
<CustomField>
    <fullName>NCSPSA_Require_Standby__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require Standby</label>
    <type>Checkbox</type>
</CustomField>