TP INT-045 Build/main/default/objects/pse__Resource_Request__c/fields/NCSPSA_Security_Clearance__c.field-meta.xml
<CustomField>
    <fullName>NCSPSA_Security_Clearance__c</fullName>
    <label>Security Clearance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Cat 1</fullName>
            </value>
            <value>
                <fullName>Cat 2</fullName>
            </value>
            <value>
                <fullName>Cat 2a</fullName>
            </value>
            <value>
                <fullName>Cat 2b</fullName>
            </value>
            <value>
                <fullName>Customer Clearance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>