TP INT-045 Build/main/default/objects/pse__Resource_Request__c/fields/NCSPSA_Stage__c.field-meta.xml
<CustomField>
    <fullName>NCSPSA_Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>pse__Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Council / Mgt Approval</fullName>
            </value>
            <value>
                <fullName>Pending External Fulfilment</fullName>
            </value>
            <value>
                <fullName>Pending Internal Fulfilment</fullName>
            </value>
            <value>
                <fullName>Pending Offer</fullName>
            </value>
            <value>
                <fullName>Offer Made</fullName>
            </value>
            <value>
                <fullName>Offer Accepted</fullName>
            </value>
            <value>
                <fullName>Pending Clearance</fullName>
            </value>
            <value>
                <fullName>Awaiting staff to be onboard project</fullName>
            </value>
            <value>
                <fullName>External Fulfilment Cancelled</fullName>
            </value>
            <value>
                <fullName>Pending Assignment</fullName>
            </value>
            <value>
                <fullName>Request On-Hold</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Accepted By Interviewer / Offer Made</fullName>
                <isActive>false</isActive>
                <label>Accepted By Interviewer / Offer Made</label>
            </value>
            <value>
                <fullName>Disapproved</fullName>
                <isActive>false</isActive>
                <label>Disapproved</label>
            </value>
            <value>
                <fullName>Offer Accepted / Pending Clearance</fullName>
                <isActive>false</isActive>
                <label>Offer Accepted / Pending Clearance</label>
            </value>
            <value>
                <fullName>Onboarded / Closed</fullName>
                <isActive>false</isActive>
                <label>Onboarded / Closed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>