TP INT-045 Build/main/default/objects/pse__Resource_Request__c/fields/NCSPSA_Work_Location__c.field-meta.xml
<CustomField>
    <fullName>NCSPSA_Work_Location__c</fullName>
    <label>Work Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onsite - Client Location</fullName>
            </value>
            <value>
                <fullName>Remote</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>